[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "buildman-u-boot"
version = "0.0.1"
authors = [
  { name="Simon Glass", email="sjg@chromium.org" },
]
dependencies = ["u_boot_pylib"]
description = "Buildman build tool"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://u-boot.readthedocs.io/en/latest/build/buildman.html"
"Bug Tracker" = "https://source.denx.de/groups/u-boot/-/issues"
